--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Wow, Movies</title>
     <!-- Firebase Stuff -->
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script> -->
     <script>
     // Initialize Firebase
     var config = {
