--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,9 @@
     <title>Wow, Movies</title>
     <!-- Firebase Stuff -->
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script> -->
-    <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyD_CuPg8WF-MwXXXMVx20jz5TV10B-DPRU",
-        authDomain: "cis371movieproject.firebaseapp.com",
-        databaseURL: "https://cis371movieproject.firebaseio.com",
-        projectId: "cis371movieproject",
-        storageBucket: "cis371movieproject.appspot.com",
-        messagingSenderId: "657681348776"
-    };
-    firebase.initializeApp(config);
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
+
   </head>
 
   <body>
